--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="header">
 
-        <img src="https://i.imgur.com/GqPlTna.png" class="img-responsive" alt="Image" width="250px">
+        <img src="https://i.imgur.com/Lf5dNRg.png" class="img-responsive" alt="Image" width="250px">
 
     </div>
     <h5 class="text-center" style="margin-bottom:50px">CIDADES ELEGÍVEIS À PROMOÇÃO ATÉ 3 MESES DE COMISSÃO REDUZIDA
